# restql-home

./: Cargo.toml  README.md  docker-compose.yaml  stuff.sql  test.sh
src/: error.rs  lib.rs  methods.rs  scripting.rs  value.rs
src/methods/: sql.rs
src/value/: datetime_iso8601.rs  serde.rs
tests/: main.rs  main.rs.bck  setup.sql
