[package]
name = "restql-home"
version = "0.1.0"
edition = "2021"
default-run = "restql-at-home"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = { version = "0.6.17", features = ["tokio", "http2", "json", "macros"] }
deadpool-postgres = "0.10.5"
hyper = { version = "0.14.26", features = ["full"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["full"] }
tokio-postgres = { version = "0.7.8", features = ["with-serde_json-1", "with-uuid-1", "with-time-0_3"] }
tower = "0.4.13"
uuid = { version = "1", features = ["serde", "v4"] }
postgres-types = { version = "0.2.5", features = ["derive"] }
time = { version = "0.3.20", features = ["serde", "formatting", "parsing", "macros"] }
futures-util = "0.3.28"
reqwest = { version = "0.11.17", features = ["json"] }
escargot = "0.5.7"
axum-extra = "0.7.4"
either = { version = "1.8.1", features = ["serde"] }
mlua = { version = "0.8.8", features = ["luau", "async", "vendored", "send", "serialize", "macros"] }
postgrest-query-parser = {git = "https://github.com/thomas9911/postgrest-query-parser"}
sea-schema = { version = "0.11.0", features =  ["sqlx-postgres", "runtime-tokio-native-tls", "discovery", "writer", "probe", "with-serde"], default-features = false }
sea-query-binder = {version = "*", features = ["sqlx-postgres"]}
# sea-schema = { version = "0.11.0", features =  ["postgres", "discovery", "writer", "probe", "with-serde"], default-features = false }
sqlx-core = {version = "*", features = ["uuid", "time"]}

[dev-dependencies]
libtest-mimic = "0.6.0"
reqwest = "0.11.17"

[[test]]
name = "integration-test"
path = "tests/main.rs"
harness = false
